<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.madaim.ex7.RegisterActivity"
    android:background="@drawable/border"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/fn"
        android:layout_marginStart="22dp"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:textStyle="bold"
        />
<EditText
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView2"
    android:layout_toEndOf="@+id/textView2"
    android:layout_marginBottom="15dp"
    android:id="@+id/ed"
     />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/ln"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:id="@+id/ed2"
        />


    <RadioGroup
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/radioGroup"
            android:layout_toEndOf="@+id/radioGroup"
            android:text="@string/ml"

            />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_weight="1"
            android:text="@string/fl" />


    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bt"
        android:layout_marginTop="77dp"
        android:background="@android:color/holo_blue_bright"
        android:layout_below="@+id/radioGroup"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginStart="15dp"
        android:onClick="onButtonClick"
           />

</RelativeLayout>
